--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -725,6 +725,19 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>200</y>
+      <width>99</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>reset</string>
+    </property>
+   </widget>
    <zorder>table</zorder>
    <zorder>solve</zorder>
    <zorder>pb00_2</zorder>
@@ -737,6 +750,7 @@
    <zorder>pb00_9</zorder>
    <zorder>pb00_1</zorder>
    <zorder>label</zorder>
+   <zorder>pushButton</zorder>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -761,7 +775,6 @@
      <string>menu</string>
     </property>
     <addaction name="actionNew_game"/>
-    <addaction name="actionExit"/>
    </widget>
    <addaction name="menuMenu"/>
   </widget>
